randomPath/objects/dupcheck__dcJob__c/fields/dupcheck__autoProcessSourceFilterMethod__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__autoProcessSourceFilterMethod__c</fullName>
    <description>Contains the filter method or predefined filter.</description>
    <label>Auto Process Source Filter Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>filter</fullName>
            </value>
            <value>
                <fullName>all</fullName>
            </value>
            <value>
                <fullName>predefined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>