randomPath/objects/dupcheck__dcJob__c/fields/dupcheck__groupFilter__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__groupFilter__c</fullName>
    <description>Contains the SOQL for filtering on group level for sub-jobs</description>
    <label>Group Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>