randomPath/objects/dupcheck__dcJob__c/fields/dupcheck__matchFilter__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__matchFilter__c</fullName>
    <description>Contains the Plauti filter object. The filterMatch__c is used for the search.</description>
    <label>Match Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>